Fix some install paths
darcs-hash:20060117053326-733a7-84d24eaeeb8feecd813a5c86c23fa3b8f38d64ec.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,9 +117,9 @@ MACRO(ITK_CONFIG_TCL_PACKAGE BINARY_DIR)
   ENDIF(CMAKE_CONFIGURATION_TYPES)
 
   # Configure pkgIndex.tcl for the install tree.
-  SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Tcl")
-  SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG")
-  SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Data")
+  SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl")
+  SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG")
+  SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Data")
   SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
   CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/Tcl/pkgIndex.tcl.in"
                  "${BINARY_DIR}/Tcl/InstallOnly/pkgIndex.tcl"
@@ -228,8 +228,8 @@ MACRO(ITK_CONFIG_PYTHON_PACKAGE BINARY_DIR)
       "${WrapITK_BINARY_DIR}/Python/${file}.py")
   ENDFOREACH(file)
 
-  SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG")
-  SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Data")
+  SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG")
+  SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Data")
   SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
   CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/Python/itkbase.py.in"
                  "${BINARY_DIR}/Python/InstallOnly/itkbase.py"
@@ -278,10 +278,23 @@ CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/UseWrapITK.cmake.in"
                @ONLY IMMEDIATE)
 
 # Second, configure for installed use.
-SET(CONFIG_SWIG_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Configuration")
-SET(CONFIG_CONFIG_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Configuration")
-SET(CONFIG_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/Configuration")
-SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${LIBRARY_OUTPUT_PATH}")
+SET(CONFIG_SWIG_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configuration")
+SET(CONFIG_CONFIG_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configuration")
+SET(CONFIG_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configuration")
+
+SET(CONFIG_WRAP_ITK_LIBRARY_DIR "\n")
+IF(WRAP_ITK_TCL)
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG\n")
+ENDIF(WRAP_ITK_TCL)
+IF(WRAP_ITK_PERL)
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Perl-SWIG\n")
+ENDIF(WRAP_ITK_PERL)
+IF(WRAP_ITK_PYTHON)
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG\n")
+ENDIF(WRAP_ITK_PYTHON)
+IF(WRAP_ITK_JAVA)
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Java-SWIG\n")
+ENDIF(WRAP_ITK_JAVA)
 
 SET(CONFIG_MIDX_FILES "")
 FOREACH(midx 
@@ -295,7 +308,7 @@ FOREACH(midx
     "ITKSpatialObject"
     "ITKAlgorithms"
     "ITKIO")
-  SET(CONFIG_MIDX_FILES "${CONFIG_MIDX_FILES}\n  \"${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_LOCATION}/ClassIndex/${midx}.mdx\"")
+  SET(CONFIG_MIDX_FILES "${CONFIG_MIDX_FILES}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/ClassIndex/${midx}.mdx\"")
 ENDFOREACH(midx)
 
 CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/UseWrapITK.cmake.in"
