Fix UseWrapITK link directories when multiple languages are configured
darcs-hash:20060117081456-733a7-c7e8c9c04d6346928232383e5c663fc57bd3e71d.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,18 +282,18 @@ SET(CONFIG_SWIG_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configu
 SET(CONFIG_CONFIG_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configuration")
 SET(CONFIG_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configuration")
 
-SET(CONFIG_WRAP_ITK_LIBRARY_DIR "\n")
+SET(CONFIG_WRAP_ITK_LIBRARY_DIR "")
 IF(WRAP_ITK_TCL)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG\n")
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG\"")
 ENDIF(WRAP_ITK_TCL)
 IF(WRAP_ITK_PERL)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Perl-SWIG\n")
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Perl-SWIG\"")
 ENDIF(WRAP_ITK_PERL)
 IF(WRAP_ITK_PYTHON)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG\n")
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG\"")
 ENDIF(WRAP_ITK_PYTHON)
 IF(WRAP_ITK_JAVA)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}  ${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Java-SWIG\n")
+  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Java-SWIG\"")
 ENDIF(WRAP_ITK_JAVA)
 
 SET(CONFIG_MIDX_FILES "")
