add missing configuration files
darcs-hash:20060117162408-2fc9d-b28fddb0ced4e8890d2dd9e4a134ec128e73c044.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -324,6 +324,9 @@ FOREACH(f
  WrapITK.cmake
  WrapTypePrefix.cmake
  WrapTypeBase.cmake
+ Master.mdx.in
+ SwigInc.txt.in
+ empty.depend.in
  wrap_ITKLang.cxx.in
  WrapITKLang.cmake)
   INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Configuration" FILES "${f}")
