Move SWIG libraries (only ones that must be linked against) to install in WrapITK/lib
darcs-hash:20060117191648-733a7-37a60c7f085109fe3b957c79528003c5f7723840.gz

--- a/SwigRuntime/CMakeLists.txt
+++ b/SwigRuntime/CMakeLists.txt
@@ -5,21 +5,21 @@ IF(WRAP_ITK_TCL)
   ADD_LIBRARY(SwigRuntimeTcl SHARED ${WrapITK_BINARY_DIR}/SwigRuntime/swigrunTcl.cxx)
   SET_TARGET_PROPERTIES(SwigRuntimeTcl PROPERTIES LINK_FLAGS "${CSWIG_EXTRA_LINKFLAGS}")
   TARGET_LINK_LIBRARIES(SwigRuntimeTcl ${TCL_LIBRARY})
-  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG" SwigRuntimeTcl)
+  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/lib" SwigRuntimeTcl)
 ENDIF(WRAP_ITK_TCL)
 
 IF(WRAP_ITK_PYTHON)
   SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/swigrunPython.cxx GENERATED)
   ADD_LIBRARY(SwigRuntimePython SHARED ${WrapITK_BINARY_DIR}/SwigRuntime/swigrunPython.cxx)
   TARGET_LINK_LIBRARIES(SwigRuntimePython ${PYTHON_LIBRARY})
-  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG" SwigRuntimePython)
+  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/lib" SwigRuntimePython)
 ENDIF(WRAP_ITK_PYTHON)
 
 IF(WRAP_ITK_PERL)
   SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/swigrunPerl.cxx GENERATED)
   ADD_LIBRARY(SwigRuntimePerl SHARED ${WrapITK_BINARY_DIR}/SwigRuntime/swigrunPerl.cxx)
   TARGET_LINK_LIBRARIES(SwigRuntimePerl "${PERL_LIBRARY}")
-  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/Perl-SWIG" SwigRuntimePerl)
+  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/lib" SwigRuntimePerl)
 ENDIF(WRAP_ITK_PERL)
 
 MACRO(CREATE_SWIG_RUNTIME LangOption LibName LangPostFix)
@@ -57,7 +57,7 @@ ENDIF(WRAP_ITK_PERL)
 IF(WRAP_ITK_JAVA)
   SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx GENERATED)
   ADD_LIBRARY(SwigRuntimeJava MODULE ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx JavaCWD.cxx)
-  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/Java-SWIG" SwigRuntimeJava)
+  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/lib" SwigRuntimeJava)
   MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR}/InsightToolkit)
   ADD_CUSTOM_COMMAND(
         COMMENT "run native swig on SwigExtras.i"
