--- a/UseWrapITK.cmake.in
+++ b/UseWrapITK.cmake.in
@@ -49,7 +49,7 @@ ENDIF(JAVA_OUTPUT_DIR)
 
 SET(WRAP_ITK_MASTER_INDEX_FILES @CONFIG_MIDX_FILES@)
 
-LINK_DIRECTORIES(@CONFIG_WRAP_ITK_LIBRARY_DIR@)
+LINK_DIRECTORIES("@CONFIG_WRAP_ITK_SWIG_LIBRARY_DIR@")
 
 # Now include itkConfigWrapping
 INCLUDE("${WRAP_ITK_CMAKE_DIR}/itkConfigWrapping.cmake")
