--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,7 +255,7 @@ ITK_CONFIG_PACKAGE(${WrapITK_BINARY_DIR})
 SET(CONFIG_SWIG_DIR "${WrapITK_SOURCE_DIR}")
 SET(CONFIG_CONFIG_DIR "${WrapITK_SOURCE_DIR}")
 SET(CONFIG_CMAKE_DIR "${WrapITK_SOURCE_DIR}")
-SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${LIBRARY_OUTPUT_PATH}")
+SET(CONFIG_WRAP_ITK_SWIG_LIBRARY_DIR "${LIBRARY_OUTPUT_PATH}")
 
 SET(CONFIG_MIDX_FILES "")
 FOREACH(midx 
@@ -281,19 +281,7 @@ SET(CONFIG_SWIG_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configu
 SET(CONFIG_CONFIG_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configuration")
 SET(CONFIG_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Configuration")
 
-SET(CONFIG_WRAP_ITK_LIBRARY_DIR "")
-IF(WRAP_ITK_TCL)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG\"")
-ENDIF(WRAP_ITK_TCL)
-IF(WRAP_ITK_PERL)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Perl-SWIG\"")
-ENDIF(WRAP_ITK_PERL)
-IF(WRAP_ITK_PYTHON)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG\"")
-ENDIF(WRAP_ITK_PYTHON)
-IF(WRAP_ITK_JAVA)
-  SET(CONFIG_WRAP_ITK_LIBRARY_DIR "${CONFIG_WRAP_ITK_LIBRARY_DIR}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Java-SWIG\"")
-ENDIF(WRAP_ITK_JAVA)
+SET(CONFIG_WRAP_ITK_SWIG_LIBRARY_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/lib")
 
 SET(CONFIG_MIDX_FILES "")
 FOREACH(midx 
