--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -1,10 +1,40 @@
+# Configure pkgIndex.tcl for the build tree.
+SET(WRAP_ITK_DATA_ROOT "${WrapITK_BINARY_DIR}/Data")
+SET(WRAP_ITK_TEST_ROOT "${WrapITK_BINARY_DIR}/Testing")
+SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
+
+IF(CMAKE_CONFIGURATION_TYPES)
+  FOREACH(config ${CMAKE_CONFIGURATION_TYPES})
+    SET(WRAP_ITK_PACKAGE_DIR "${ITK_CSWIG_PACKAGE_DIR_BUILD}/${config}")
+    CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
+                   "${CMAKE_CURRENT_BINARY_DIR}/${config}/pkgIndex.tcl"
+                   @ONLY IMMEDIATE)
+  ENDFOREACH(config)
+ELSE(CMAKE_CONFIGURATION_TYPES)
+  SET(WRAP_ITK_PACKAGE_DIR "${ITK_CSWIG_PACKAGE_DIR_BUILD}")
+  CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
+                 "${CMAKE_CURRENT_BINARY_DIR}/pkgIndex.tcl"
+                 @ONLY IMMEDIATE)
+ENDIF(CMAKE_CONFIGURATION_TYPES)
+
+# Configure pkgIndex.tcl for the install tree.
+SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl")
+SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG")
+SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Data")
+SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
+CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
+               "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/pkgIndex.tcl"
+               IMMEDIATE @ONLY)
+INSTALL_FILES( "${WRAP_ITK_INSTALL_LOCATION}/Tcl" FILES
+              "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/pkgIndex.tcl")
+
 SET(ITK_TCL_EXE_DIR_BUILD "${ITK_EXECUTABLE_PATH}")
 SET(ITK_TCL_EXE_NAME_ROOT "itkwish")
 
-CONFIGURE_FILE(${WrapITK_SOURCE_DIR}/Tcl/itkTclConfigure.h.in
-               ${WrapITK_BINARY_DIR}/Tcl/itkTclConfigure.h)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/itkTclConfigure.h.in
+               ${CMAKE_CURRENT_BINARY_DIR}/itkTclConfigure.h)
 
-INCLUDE_DIRECTORIES(${WrapITK_BINARY_DIR}/Tcl)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 ADD_EXECUTABLE(itkwish itkTclAppInit.cxx)
 TARGET_LINK_LIBRARIES(itkwish
   ITKAlgorithmsTcl
