Fix missing quote in Python/CMakeLists.txt
darcs-hash:20060118005625-733a7-3463c7f65627bc4e27c5471078dbaa105914254b.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -12,7 +12,7 @@ IF(CMAKE_CONFIGURATION_TYPES)
 ELSE(CMAKE_CONFIGURATION_TYPES)
   SET(WRAP_ITK_PACKAGE_DIR "${LIBRARY_OUTPUT_PATH}")
   CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkbase.py.in"
-                 ${CMAKE_CURRENT_BINARY_DIR}/itkbase.py"
+                 "${CMAKE_CURRENT_BINARY_DIR}/itkbase.py"
                  @ONLY IMMEDIATE)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
