Fix WrapITK.pth generation
darcs-hash:20060118012915-733a7-6edad6277c13d1769384702f07d8b1c89f6937ce.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -91,7 +91,7 @@ CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/WrapITK.pth.in"
              "${CMAKE_CURRENT_BINARY_DIR}/WrapITK.pth"
              @ONLY IMMEDIATE)
              
-SET(CONFIG_WRAP_ITK_PYTHON_DIR "${WRAP_ITK_INSTALL_LOCATION}/Python")
+SET(CONFIG_WRAP_ITK_PYTHON_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python")
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/WrapITK.pth.in"
              "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/WrapITK.pth"
              @ONLY IMMEDIATE)
