--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ IF(WRAP_ITK_JAVA)
 ENDIF(WRAP_ITK_JAVA)
 
 ###############################################################################
-# Configure UseWrapITK.cmake and FindWrapITK.cmale for external projects
+# Configure WrapITKConfig.cmake and FindWrapITK.cmale for external projects
 ###############################################################################
 
 # First, configure for use directly from the build dir.
@@ -116,8 +116,8 @@ FOREACH(midx
   SET(CONFIG_MIDX_FILES "${CONFIG_MIDX_FILES}\n  \"${WrapITK_BINARY_DIR}/${midx}.mdx\"")
 ENDFOREACH(midx)
 
-CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/UseWrapITK.cmake.in"
-               "${WrapITK_BINARY_DIR}/UseWrapITK.cmake"
+CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/WrapITKConfig.cmake.in"
+               "${WrapITK_BINARY_DIR}/WrapITKConfig.cmake"
                @ONLY IMMEDIATE)
 
 SET(CONFIG_WRAP_ITK_DIR "${WrapITK_BINARY_DIR}")
@@ -147,8 +147,8 @@ FOREACH(midx
   SET(CONFIG_MIDX_FILES "${CONFIG_MIDX_FILES}\n  \"${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/ClassIndex/${midx}.mdx\"")
 ENDFOREACH(midx)
 
-CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/UseWrapITK.cmake.in"
-               "${WrapITK_BINARY_DIR}/InstallOnly/UseWrapITK.cmake"
+CONFIGURE_FILE("${WrapITK_SOURCE_DIR}/WrapITKConfig.cmake.in"
+               "${WrapITK_BINARY_DIR}/InstallOnly/WrapITKConfig.cmake"
                @ONLY IMMEDIATE)
 
 SET(CONFIG_WRAP_ITK_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}")
@@ -172,6 +172,6 @@ FOREACH(f
   INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Configuration" FILES "${f}")
 ENDFOREACH(f)
 
-INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}" FILES "${WrapITK_BINARY_DIR}/InstallOnly/UseWrapITK.cmake")
+INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}" FILES "${WrapITK_BINARY_DIR}/InstallOnly/WrapITKConfig.cmake")
 # INTSTALL doesn't work with absolute paths... can't install yet.
 # INSTALL_FILES( "${CMAKE_ROOT}/Modules" FILES "${WrapITK_BINARY_DIR}/InstallOnly/FindWrapITK.cmake")
