save rgb settings in config file
darcs-hash:20060118132111-2fc9d-bfd572af194ddbe7728a4f90e51345160c575d84.gz

--- a/WrapITKConfig.cmake.in
+++ b/WrapITKConfig.cmake.in
@@ -23,6 +23,8 @@ SET(WRAP_vector_float @WRAP_vector_float@ CACHE BOOL "Wrap vector float type")
 SET(WRAP_vector_double @WRAP_vector_double@ CACHE BOOL "Wrap vector double type")
 SET(WRAP_covariant_vector_float @WRAP_covariant_vector_float@ CACHE BOOL "Wrap covariant vector float type")
 SET(WRAP_covariant_vector_double @WRAP_covariant_vector_double@ CACHE BOOL "Wrap covariant vector double type")
+SET(WRAP_rgb_unsigned_char @WRAP_rgb_unsigned_char@ CACHE BOOL "Wrap RGB< unsigned char > type")
+SET(WRAP_rgb_unsigned_short @WRAP_rgb_unsigned_short@ CACHE BOOL "Wrap RGB< unsigned short > type")
 SET(WRAP_DIMS "@WRAP_DIMS@" CACHE STRING "dimensions available separated by semicolons (;)")
 
 FOREACH(var ITK_DIR CableSwig_DIR WRAP_ITK_TCL WRAP_ITK_PYTHON WRAP_ITK_JAVA 
