Make FindWrapITK.cmake behave as the rest of the FindXXX.cmake scripts do.
Specifically, FindWrapITK now automatically includes WrapITKConfig.cmake,
just like (a) when FIND_PACKAGE doesn't find the 'FindWrapITK' script, and
(b) like FindITK.

Also, I removed the hard-coded install path in the FIND_PATH lines because
in my opinion, the non-InstallOnly FindWrapITK.cmake should never point to
where the install tree would go. (Imagine if there was already an install
tree of an older version or something.)

darcs-hash:20060118173154-733a7-32ec71d32d1452a6d0107bd75d4e46e94d422eff.gz

--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -1,8 +1,7 @@
 FIND_PACKAGE(WrapITK)
-IF(NOT WrapITK_DIR)
+IF(NOT WrapITK_FOUND)
   MESSAGE(FATAL_ERROR "Cannot build without WrapITK.  Please set WrapITK_DIR.")
-ENDIF(NOT WrapITK_DIR)
-INCLUDE("${WrapITK_DIR}/WrapITKConfig.cmake")
+ENDIF(NOT WrapITK_FOUND)
 
 # Deal with numarray package  Options
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
