Make PyBuffer project use FIND_PACKAGE correctly
darcs-hash:20060118174116-733a7-c72a26dda25451043e94b7dfb19db6d5c81c4e17.gz

--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -1,7 +1,4 @@
-FIND_PACKAGE(WrapITK)
-IF(NOT WrapITK_FOUND)
-  MESSAGE(FATAL_ERROR "Cannot build without WrapITK.  Please set WrapITK_DIR.")
-ENDIF(NOT WrapITK_FOUND)
+FIND_PACKAGE(WrapITK REQUIRED)
 
 # Deal with numarray package  Options
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
