mark rgb options as advanced
darcs-hash:20060118182852-2fc9d-6b33b27c5b052bf788e101d0b8645bc1ea5da129.gz

--- a/WrapITKConfig.cmake.in
+++ b/WrapITKConfig.cmake.in
@@ -31,6 +31,7 @@ FOREACH(var ITK_DIR CableSwig_DIR WRAP_ITK_TCL WRAP_ITK_PYTHON WRAP_ITK_JAVA
     WRAP_unsigned_char WRAP_unsigned_short WRAP_unsigned_long WRAP_signed_char
     WRAP_signed_short WRAP_signed_long WRAP_float WRAP_double WRAP_vector_float
     WRAP_vector_double WRAP_covariant_vector_float WRAP_covariant_vector_double
+    WRAP_rgb_unsigned_char WRAP_rgb_unsigned_short
     WRAP_DIMS)
   MARK_AS_ADVANCED(${var})
 ENDFOREACH(var)
